@@ -90,6 +90,7 @@ LANG_MAP = {LANG_4GL    : (ID_LANG_4GL,       '_progress'),
             LANG_MSSQL  : (ID_LANG_MSSQL,  '_mssql'),
             LANG_NASM   : (ID_LANG_NASM,   '_nasm'),
             LANG_NEWLISP: (ID_LANG_NEWLISP,'_lisp'),
+            LANG_NONMEM : (ID_LANG_NONMEM, '_nonmem'),
             LANG_NSIS   : (ID_LANG_NSIS,   '_nsis'),
             LANG_OBJC   : (ID_LANG_OBJC,   '_cpp'),
             LANG_OCTAVE : (ID_LANG_OCTAVE, '_matlab'),
